# ot-harjoitustyo

./: .coverage  .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py  tyoaikakirjanpito.md
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
htmlcov/: index.html  src_converter_converter_py.html  src_converter_py.html  status.json
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage  pyproject.toml
laskarit/viikko2/unicafe/htmlcov/: index.html  src_kassapaate_py.html  src_maksukortti_py.html  status.json
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: luokkakaavio.txt  sekvenssikaavio1.txt  sekvenssikaavio2.txt
src/: converter.py  index.py  ui.py
src/converter/: converter.py
src/tests/: converter_test.py  ui_test.py
src/ui/: ui.py
trashbin/: api.txt  try.py
