[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Santeri Salonen <santerisa.salonen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
cowsay = "^3.0"
invoke = "^1.5.0"
requests = "^2.25.1"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = "^5.5"
pylint = "^2.7.4"
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
